# runel

./: Cargo.toml  README.org  TODO.org
help/: runel.txt  runel_after.txt  runel_daemon.txt  runel_daemon_lemonbar_args.txt  runel_remote.txt  runel_remote_after.txt  runel_remote_remote_argument.txt  runel_remote_remote_command.txt  runel_remote_remote_value.txt
panel_utils/bratus/: Cargo.toml  README.org
panel_utils/bratus/src/: main.rs
panel_utils/lbattery/: Cargo.toml  README.org
panel_utils/lbattery/src/: main.rs
panel_utils/lbrightness/: Cargo.toml  README.org
panel_utils/lbrightness/src/: main.rs
panel_utils/lclock/: Cargo.toml  README.org
panel_utils/lclock/src/: main.rs
panel_utils/lvolume/: Cargo.toml  README.org
panel_utils/lvolume/src/: main.rs
panel_utils/sratus/: Cargo.toml  README.org  TODO.org
panel_utils/sratus/src/: client.rs  color.rs  config.rs  field.rs  main.rs  server.rs
src/: client.rs  color.rs  colors.rs  command.rs  config.rs  daemon.rs  error.rs  lemonbar.rs  main.rs  mode.rs  panel.rs  path.rs  remote.rs  server.rs  widget.rs  widgets.rs
src/printers/: battery.rs  brightness.rs  bspwm.rs  datetime.rs  keyboard.rs  mod.rs  printer.rs  socket.rs  title.rs  volume.rs
