[package]
name = "runel"
version = "0.1.0"
authors = ["xFA25E"]
edition = "2018"
publish = false

[dependencies]
daemonize = "0.4.1"
dirs = "1.0.5"
nix = "0.14.0"
libc = "0.2.55"
chrono = "0.4.6"
regex = "1.1.6"
alsa = "0.2.2"
inotify = "0.7.0"
xrdb = "0.1.1"
xcb = {version = "0.8.2", features = ["xkb"]}
xkbcommon = {version = "0.4.0", features = ["x11"]}

[dependencies.clap]
version = "2.33.0"
default-features = false
features = ["suggestions"]

[profile.release]
lto = true
codegen-units = 1
# panic = 'abort'
