[package]
name = "runel"
version = "0.1.0"
authors = ["xFA25E"]
edition = "2018"
publish = false

[dependencies]
daemonize = "0.4.1"
dirs = "3.0.1"
structopt = "0.3.18"
posixmq = "0.2.0"
mio = {version = "0.7.2", features = ["os-util", "os-poll"]}

[profile.release]
lto = true
codegen-units = 1
panic = 'abort'
