[package]
name = "lvolume"
version = "0.1.0"
authors = ["xFA25E <55886566+xFA25E@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
alsa = "0.4.2"
nix = "0.18.0"

[profile.release]
lto = true
codegen-units = 1
panic = 'abort'
